# any2api

./: .gitignore  README.md  docker-compose.yml
desktop/: README.md  index.html  package-lock.json
desktop/src/: main.ts  styles.css
desktop/src-tauri/: tauri.conf.json
docs/Grok/: grok1.md  grok2.md  grok3.md
go/: Dockerfile  go.mod
go/cmd/server/: main.go
go/internal/core/: config.go  config_store.go  config_store_test.go  config_test.go  dotenv.go  dotenv_test.go  execution.go  messages.go  messages_test.go  provider.go  types.go
go/internal/http/: admin.go  handler.go  handler_test.go
python/: .dockerignore  Dockerfile  admin_store.py  gateway_types.py  pyproject.toml  server.py
python/providers/: __init__.py  common.py  registry.py
python/providers/chatgpt/: __init__.py  provider.py
python/providers/cursor/: __init__.py  provider.py
python/providers/grok/: __init__.py  provider.py
python/providers/kiro/: __init__.py  provider.py
python/providers/orchids/: __init__.py  provider.py
python/providers/web/: __init__.py  provider.py
python/providers/zai_image/: __init__.py  image.py
python/providers/zai_ocr/: __init__.py  ocr.py
python/providers/zai_tts/: __init__.py  tts.py
python/tests/: test_admin_contract.py  test_providers.py  test_registry.py  test_server_env.py
rust/: Cargo.toml  Dockerfile
rust/src/: admin_store.rs  lib.rs  main.rs  registry.rs  server.rs  types.rs
rust/src/providers/: common.rs  mod.rs  zai_image.rs  (+2 more)
tools/reverse-work/: BDEoyLN_.js  BJ4IMYPr.js  BrXpCOvA.js  CAm9rDEa.js  DFZQlWS9.js  verify_signature.py
(+14 files in other folders)
