[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "any2api-python"
version = "0.1.0"
description = "Python backend for the Any2API multi-provider to-api gateway"
requires-python = ">=3.11"

[tool.setuptools]
py-modules = ["admin_store", "gateway_types", "server"]

[tool.setuptools.packages.find]
include = ["providers", "providers.*"]
